# SecureData_Suite

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.ini  settings.ini.example  Курсовая_пояснительная_записка_40стр.txt  Курсовая_пояснительная_записка_чистовая_40стр.txt  Курсовое_описание.txt  Курсовое_описание_35стр.txt
include/crypto/: atbash_cipher.h  caesar_cipher.h  cipher_base.h  cipher_manager.h  huffman_codec.h  permutation_cipher.h  rsa_cipher.h  simple_aes_cipher.h  vigenere_cipher.h  xor_cipher.h
include/stego/: lsb_steganography.h
include/ui/: MainWindow.h
include/utils/: file_cache.h  translation_manager.h
resources/: alphabets.txt  flags_README.txt  resources.qrc  ru.xpm  us.xpm
src/: main.cpp
src/crypto/: atbash_cipher.cpp  caesar_cipher.cpp  cipher_base.cpp  cipher_manager.cpp  huffman_codec.cpp  permutation_cipher.cpp  rsa_cipher.cpp  simple_aes_cipher.cpp  vigenere_cipher.cpp  xor_cipher.cpp
src/stego/: lsb_steganography.cpp
src/ui/: MainWindow.cpp  MainWindow.ui
src/utils/: file_cache.cpp  translation_manager.cpp
